--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "connect-mongo": "^1.3.2",
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
     "es6-promise": "^4.1.0",
